# magicaltavern-api

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  app_configurator.py  db.py  db.sqlite  docker-compose.sample.yml  handle_apikeys.py  main.py  prestart.sh  requirements.txt  uwsgi.ini
.github/workflows/: codeql-analysis.yml
api/v1_0/: auth.py  campaigns.py  email.py  message_keys.py  models.py  website_logic.py
api/v2_0/: authentication.py  campaigns.py  models.py  rulesets.py  users.py
docs/: api_v2.md
migration/: Cargo.toml
page/: auth.py  email.py  models.py  website_logic.py
page/routes/: admin_page.py  campaigns.py  dm_page.py  imprint.py  index.py  mentor.py  profile.py
page/templates/: AdminPage.html  base.html  index.html  reset_password.html  reset_password_mail.html  signup.html
src/: main.rs
static/: base.css  base.js
templates/: AdminPage.html  DmPage.html  base.html  campaigns.html  dm_Mentor.html  error.html  impressum.html  index.html  login.html  mail_welcome_confirm.html  profile.html  reset_password.html  reset_password_mail.html  signup.html
templates/css/: base.css
