[package]
name = "magicaltavern-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
sea-orm = { version = "0.12.3", features = ["sqlx-all", "runtime-actix"] }
actix-web = { version = "4.4.0", features = ["rustls"] }
clap = { version = "4.4.6", features = ["derive"] }
num_cpus = "1.16.0"
