[package]
name = "magicaltavern-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.4.0", features = ["rustls"] }
clap = { version = "4.4.6", features = ["derive"] }
num_cpus = "1.16.0"
sqlx = { version = "0.7.2", features = ["runtime-tokio"] }

[profile.release]
strip = true
opt-level = 3     # Set to "s" or "z" to optimize for build size, or "3" for speed.
lto = true
codegen-units = 1
